--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
     create: true
     slug: '{{slug}}'
     fields:
-      - { label: 'Slug', name: 'title', widget: 'string' }
+      - { label: 'Slug', name: 'slug', widget: 'string' }
       - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'title', widget: 'string' }
+      - { label: 'Publish Date', name: 'date', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
